# m913-ctl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/: default.ini  example.ini  example_compx.ini
src/: config.cpp  config.h  data.cpp  data.h  main.cpp  protocol.cpp  protocol.h  usb.cpp  usb.h
udev/: 99-m913.rules
